--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "homepage": "https://github.com/neerajbansal/2048#readme",
     "dependencies": {
+        "center-align": "^1.0.1",
         "chalk": "^2.4.2",
         "readline": "^1.3.0"
     }
